# tap-opencx

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_opencx/: __init__.py  client.py  schemas.py  streams.py  tap.py
tests/: __init__.py  test_core.py
